# ruthere

./: .gitignore  README.md  WORKLOG.md  docker-compose.yml  pubspec.yaml  test_api.sh
android/: .gitignore  build.gradle.kts  default_server.properties.example  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  (+1 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  init_demo.py  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_friendship.py  0003_activity.py  0004_interactions.py  0005_nickname.py
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  tasks.py
backend/app/api/: activity.py  admin.py  auth.py  deps.py  friends.py  health.py  interactions.py
backend/app/core/: __init__.py  activity_calc.py  config.py  data_sources.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  activity_report.py  checkin.py  device.py  friend_data_source.py  friend_request.py  friendship.py  notification.py  poke.py  qr_token.py  user.py  verification_code.py
backend/app/schemas/: activity.py  admin.py  auth.py  friends.py  interactions.py
backend/app/services/: __init__.py  activity.py  email.py  notifications.py  scheduler.py
backend/app/templates/: admin.html
backend/tests/: __init__.py  conftest.py  helpers.py  test_activity.py  test_auth.py  test_friends.py  test_health.py  test_interactions.py
frontend/: .gitignore  pubspec.yaml
resources/: ruthere_icon.jfif
test/: widget_test.dart
(+72 files in other folders)
